Add Header component basic structure

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,7 @@ $color-primary: #f26726;
 $color-main-bg: #f7f7f7;
 $color-gray40: rgba(0, 0, 0, 0.4);
 $color-gray65: rgba(0, 0, 0, 0.65);
+$color-white: #fff;
 
 $padding-xs: 8px;
 $padding-s: 16px;
