--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -3,10 +3,10 @@
 .header {
   width: 100%;
   height: 64px;
-  padding: 24px 16px;
+  padding: $padding-m $padding-s;
   display: flex;
   align-items: center;
-  column-gap: 32px;
+  column-gap: $margin-l;
   background-color: $color-white;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
 
