Add layout improvements

--- a/src/components/viewer/Viewer.module.scss
+++ b/src/components/viewer/Viewer.module.scss
@@ -1,5 +1,6 @@
+@import 'styles/variables';
 .viewer-img {
   width: 100%;
-  height: 90%;
+  height: calc(100vh - $header-height - $padding-xl - $padding-xl);
   object-fit: contain;
 }
