--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -17,6 +17,8 @@ $margin-m: 24px;
 $margin-l: 32px;
 $margin-xl: 48px;
 
+$header-height: 64px;
+
 $breakpoint-s: 576px;
 $breakpoint-m: 768px;
 $breakpoint-l: 992px;
