--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -2,13 +2,20 @@
 
 .header {
   width: 100%;
-  height: 64px;
+  position: sticky;
+  top: 0;
+  left: 0;
+  height: $header-height;
   padding: $padding-m $padding-s;
   display: flex;
   align-items: center;
   column-gap: $margin-l;
   background-color: $color-white;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+
+  .separator {
+    height: 32px;
+  }
 
   h1 {
     font-size: 16px;
