--- a/src/components/modal/Modal.module.scss
+++ b/src/components/modal/Modal.module.scss
@@ -1,4 +1,5 @@
 @import 'styles/variables';
+@import 'styles/mixins';
 
 .modal {
   position: fixed;
@@ -35,5 +36,9 @@
     width: 100%;
     height: 100%;
     padding: $padding-xl;
+
+    @include mobile-layout {
+      padding: $padding-m;
+    }
   }
 }
