Add route support and query document by id param

--- a/src/modules/document/components/artboard-list/ArtboardList.module.scss
+++ b/src/modules/document/components/artboard-list/ArtboardList.module.scss
@@ -44,7 +44,14 @@
   }
 }
 
-.loader-container {
+.loader-container,
+.error-container {
   width: 100%;
   height: calc(100vh - $header-height);
+}
+
+.error-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
